<resources>
    <string name="app_name">News4U</string>
    <string name="image">Image</string>
    <string name="news_image">News Image</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
</resources>